--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Prakhar70/DEV_PP11#readme",
   "dependencies": {
     "cheerio": "^1.0.0-rc.6",
-    "request": "^2.88.2"
+    "json2xls": "^0.1.2",
+    "request": "^2.88.2",
+    "xls-to-json": "^2.1.0"
   }
 }
