--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.6",
     "json2xls": "^0.1.2",
+    "puppeteer": "^9.1.1",
     "request": "^2.88.2",
     "xls-to-json": "^2.1.0"
   }
